--- a/index.css
+++ b/index.css
@@ -614,6 +614,10 @@ footer .footer-social{
         top: 300px;
         left: 100px;
     }
+    section.skill .skill-img {
+    margin-left: 3rem;
+    margin-top: 1rem;
+    }
    
     
     
